spade-tests/src/snapshots/spade_tests__ports_integration__wire_types_can_not_be_stored_in_registers.snap
---
source: spade-tests/src/ports_integration.rs
---
entity x(clk: clk, a: &bool) -> bool {
    reg(clk) _ = a;
    true
}


error: Ports can not be put in a register
  ┌─ testinput:2:18
  │
2 │     reg(clk) _ = a;
  │                  ^ This is a port
  │
  = &bool is a port


